# deadend.dev

./: .clinerules  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: build.yml  update-evidence.yml
api/: mcp.py
data/canons/aws/: access-denied-s3_aws-cli2-linux.json  assume-role-unauthorized_awscli2-linux.json  cloudformation-rollback-complete_awscli2-linux.json  cloudwatch-log-group-exists_aws-cli2-linux.json  cognito-user-not-confirmed_aws-cli2-linux.json  dynamodb-provisioned-throughput-exceeded_awscli2-linux.json  ecr-login-required_awscli2-linux.json  ecs-service-unable-to-place_aws-cli2-linux.json  iam-policy-too-large_awscli2-linux.json  lambda-runtime-error_aws-cli2-linux.json  lambda-timeout_awscli2-linux.json  limit-exceeded_awscli2-linux.json  parameter-store-not-found_aws-cli2-linux.json  rds-connection-timeout_aws-cli2-linux.json  region-not-set_awscli2-linux.json  resource-already-exists_awscli2-linux.json  s3-access-denied_awscli2-linux.json  s3-nosuchbucket_aws-cli2-linux.json  secrets-manager-not-found_aws-cli2-linux.json  (+4 more)
data/environments/: env_matrix.json
generator/: build_site.py  bulk_generate.py  generate_canons.py  generate_pairs.py  lookup.py  pipeline.py  schema.py  validate.py
generator/templates/: domain.html  error_summary.html  index.html  page.html  search.html
mcp/: core.py  server.py
tests/: conftest.py  test_build_integration.py  test_lookup.py  test_mcp_core.py  test_pipeline.py  test_schema.py  test_validate.py
(+817 files in other folders)
